# a-raytracer

./: Makefile  Readme.md  circle_ray.cc  meson.build  objects.h  ray_ppm.cc  shading.cc  simple_ppm.cc
